--- a/int/flux-config/flux-sync.yml
+++ b/int/flux-config/flux-sync.yml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
-  name: flux-example
+  name: flux-example-int
   namespace: flux-system
 spec:
   interval: 1m0s
@@ -10,5 +10,5 @@ spec:
   prune: false
   sourceRef:
     kind: GitRepository
-    name: flux-example
+    name: flux-example-int
 
