added image update automation for dev

--- a/dev/kustomization.yaml
+++ b/dev/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 namespace: dev
 resources:
   - ../base
+  - image-automation.yaml
 patchesStrategicMerge:
   - image-patch.yaml
   - image-policy-patch.yaml
