--- a/dev/image-automation.yaml
+++ b/dev/image-automation.yaml
@@ -1,7 +1,7 @@
 apiVersion: image.toolkit.fluxcd.io/v1alpha2
 kind: ImageUpdateAutomation
 metadata:
-  name: nginx
+  name: flux-example-dev
 spec:
   interval: 2m0s
   sourceRef:
