--- a/int/flux-config/flux-sync.yml
+++ b/int/flux-config/flux-sync.yml
@@ -7,7 +7,7 @@ metadata:
 spec:
   interval: 1m0s
   path: ./int
-  prune: false
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-example-int
