--- a/dev/flux-config/flux-sync.yml
+++ b/dev/flux-config/flux-sync.yml
@@ -3,7 +3,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
   name: flux-example-dev
-  namespace: flux-system
+  namespace: dev
 spec:
   interval: 1m0s
   path: ./dev
