--- a/dev/flux-config/git-repository.yml
+++ b/dev/flux-config/git-repository.yml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: GitRepository
 metadata:
   name: flux-example-dev
-  namespace: flux-system
+  namespace: dev
 spec:
   interval: 1m0s
   ref:
