--- a/int/flux-config/flux-sync.yml
+++ b/int/flux-config/flux-sync.yml
@@ -3,7 +3,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
   name: flux-example-int
-  namespace: flux-system
+  namespace: qa
 spec:
   interval: 1m0s
   path: ./int
