--- a/int/flux-config/git-repository.yml
+++ b/int/flux-config/git-repository.yml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: GitRepository
 metadata:
   name: flux-example-int
-  namespace: flux-system
+  namespace: qa
 spec:
   interval: 1m0s
   ref:
