--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -3,5 +3,6 @@ kind: Kustomization
 resources:
   - deployment.yaml
   - service.yaml
+  - flux-example-repo-secret.yaml
   - image-repository.yaml
   - image-policy.yaml
