added missing image update automation to kustomization.yaml

--- a/int/kustomization.yaml
+++ b/int/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 namespace: qa
 resources:
   - ../base
+  - image-automation.yaml
 patchesStrategicMerge:
   - image-patch.yaml
   - image-policy-patch.yaml
