cleaned up for demo

--- a/dev/image-automation.yaml
+++ b/dev/image-automation.yaml
@@ -17,5 +17,5 @@ spec:
     commit:
       author:
         name: FluxDevBot
-        email: fluxbot@swdc.bosch-cs.com
+        email: fluxintbot@swdc.bosch-cs.com
       messageTemplate: '{{range .Updated.Images}}{{println .}}{{end}}'
