added filter tags in image policy as differentiating factor

--- a/int/image-automation.yaml
+++ b/int/image-automation.yaml
@@ -9,7 +9,7 @@ spec:
     name: flux-example-int
   update:
     strategy: Setters
-    path: int/
+    path: int
   git:
     checkout:
       ref:
