--- a/dev/image-automation.yaml
+++ b/dev/image-automation.yaml
@@ -9,7 +9,7 @@ spec:
     name: flux-example-dev
   update:
     strategy: Setters
-    path: dev/
+    path: dev
   git:
     checkout:
       ref:
