--- a/int/flux-config/flux-example-repo-secret.yaml
+++ b/int/flux-config/flux-example-repo-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: flux-example-repo-secret
+  namespace: qa
 data:
   password: ZTExYmU5MThmNDM1OGRjNTFlMTY3MDNmYmRiMjM2MDk0ODQ4ZWY4MQ==
   username: YmFsc21u
